fixes not visible notifications

--- a/app/assets/stylesheets/views/play_screen_view.css.scss
+++ b/app/assets/stylesheets/views/play_screen_view.css.scss
@@ -9,6 +9,7 @@
 
 #play-screen-view {
   overflow: hidden;
+  height: 768px;
 }
 
 #retry-button {
